--- a/package.json
+++ b/package.json
@@ -35,8 +35,9 @@
     "@ngx-translate/http-loader": "^4.0.0",
     "angularfire2": "^5.1.0",
     "core-js": "^2.5.4",
-    "firebase": "^5.5.6",
     "express": "^4.16.4",
+    "firebase": "^5.5.6",
+    "normalize.css": "^8.0.0",
     "path": "^0.12.7",
     "rxjs": "^6.3.3",
     "zone.js": "~0.8.26"
