--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "core-js": "^2.5.4",
     "express": "^4.16.4",
     "firebase": "^5.5.6",
+    "moment": "^2.22.2",
     "normalize.css": "^8.0.0",
     "path": "^0.12.7",
     "rxjs": "^6.3.3",
