--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "moment": "^2.22.2",
     "normalize.css": "^8.0.0",
     "path": "^0.12.7",
+    "request": "^2.88.0",
     "rxjs": "^6.3.3",
     "zone.js": "~0.8.26"
   },
