--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@ngx-translate/core": "^11.0.0",
     "@ngx-translate/http-loader": "^4.0.0",
     "angularfire2": "^5.1.0",
+    "cities.json": "^1.1.5",
     "core-js": "^2.5.4",
     "cors": "^2.8.5",
     "express": "^4.16.4",
